# black-tonny-backend

./: .env.example  .env.local.example  .env.production.example  .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
app/: __init__.py  main.py
deploy/: docker-compose.yml
docs/: README.md  api-response-standard.md  backend-boilerplate-alignment.md  backend-boilerplate-migration-roadmap.md  frontend-auth-api.md  frontend-backend-boundary.md  two-database-architecture.md
scripts/: admit_yeusoft_customer_capture.py  admit_yeusoft_customer_capture_research.py  admit_yeusoft_daily_payment_snapshot_capture.py  admit_yeusoft_inventory_outin_capture.py  admit_yeusoft_inventory_outin_capture_research.py  admit_yeusoft_inventory_stock_capture.py  admit_yeusoft_member_analysis_snapshot_capture.py  admit_yeusoft_member_capture.py  admit_yeusoft_member_capture_research.py  admit_yeusoft_member_maintenance_capture.py  admit_yeusoft_member_maintenance_capture_research.py  admit_yeusoft_member_sales_rank_snapshot_capture.py  admit_yeusoft_product_capture.py  admit_yeusoft_product_capture_research.py  admit_yeusoft_product_sales_snapshot_capture.py  admit_yeusoft_receipt_confirmation_capture.py  admit_yeusoft_receipt_confirmation_capture_research.py  admit_yeusoft_return_detail_capture_research.py  admit_yeusoft_sales_capture.py  admit_yeusoft_store_stocktaking_capture.py  admit_yeusoft_stored_value_capture.py  (+37 more)
(+193 files in other folders)
