[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-tonny-backend"
version = "0.1.0"
description = "Standalone backend scaffold for Black Tonny retail analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pymysql>=1.1,<2.0",
  "cryptography>=44,<46",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]
research = [
  "playwright>=1.53,<2.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.api",
  "app.api.routes",
  "app.core",
  "app.db",
  "app.jobs",
  "app.schemas",
  "app.services",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
